[project]
name = "comfyui-gguf-prompt-rewriter"
version = "0.1.0"
description = "Standalone ComfyUI nodes for prompt rewriting with local GGUF models via llama-cpp-python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "llama-cpp-python>=0.3.20",
]

[tool.setuptools]
py-modules = []
